tests/rosetta/transpiler/Java/calkin-wilf-sequence.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Goldencalkin-wilf-sequence906489229/001/Main.java:15: error: bad operand types for binary operator '/'
            java.math.BigInteger f = new java.math.BigInteger(String.valueOf(a / b));
                                                                               ^
  first type:  BigInteger
  second type: BigInteger
/tmp/TestJavaTranspiler_Rosetta_Goldencalkin-wilf-sequence906489229/001/Main.java:16: error: incompatible types: BigInteger cannot be converted to int
            BigRat t = bigrat(f, 1);
                              ^
/tmp/TestJavaTranspiler_Rosetta_Goldencalkin-wilf-sequence906489229/001/Main.java:32: error: bad operand types for binary operator '/'
            res = java.util.stream.IntStream.concat(java.util.Arrays.stream(res), java.util.stream.IntStream.of(((Number)((a_1 / b_1))).intValue())).toArray();
                                                                                                                               ^
  first type:  BigInteger
  second type: BigInteger
/tmp/TestJavaTranspiler_Rosetta_Goldencalkin-wilf-sequence906489229/001/Main.java:33: error: no suitable method found for floorMod(BigInteger,BigInteger)
            int t_1 = Math.floorMod(a_1, b_1);
                          ^
    method Math.floorMod(int,int) is not applicable
      (argument mismatch; BigInteger cannot be converted to int)
    method Math.floorMod(long,int) is not applicable
      (argument mismatch; BigInteger cannot be converted to long)
    method Math.floorMod(long,long) is not applicable
      (argument mismatch; BigInteger cannot be converted to long)
/tmp/TestJavaTranspiler_Rosetta_Goldencalkin-wilf-sequence906489229/001/Main.java:36: error: bad operand types for binary operator '=='
            if (a_1 == 1) {
                    ^
  first type:  BigInteger
  second type: int
/tmp/TestJavaTranspiler_Rosetta_Goldencalkin-wilf-sequence906489229/001/Main.java:51: error: cannot find symbol
            b_2 = (String)(repeat(d, n)) + b_2;
                           ^
  symbol:   method repeat(String,int)
  location: class Main
/tmp/TestJavaTranspiler_Rosetta_Goldencalkin-wilf-sequence906489229/001/Main.java:97: error: incompatible types: int cannot be converted to String
            System.out.println((String)(_padStart((i_2 + ((Number)(1)).intValue()), 2, " ")) + ": " + s_1);
                                                       ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
7 errors
